# aoclib

./: CHANGELOG.md  LICENSE  README.md  aoclib.cabal  flake.nix  hie.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src-testing/AoC/Parser/: Testing.hs
src/AoC/: Optimization.hs  Parser.hs
src/AoC/Data/: Interval.hs  IntervalTree.hs  Puzzle.hs
src/AoC/Data/Grid/: Parser.hs  Rectangular.hs
src/AoC/Net/: Puzzle.hs
src/AoC/Parser/: CLI.hs  Testing.hs
test/AoC/: OptimizationSpec.hs  ParserSpec.hs
test/AoC/Data/: IntervalSpec.hs  IntervalTreeSpec.hs
test/AoC/Data/Grid/: ParserSpec.hs  RectangularSpec.hs
